Question Search align fix

--- a/src/components/Banner/LeftBanner.module.scss
+++ b/src/components/Banner/LeftBanner.module.scss
@@ -1,5 +1,5 @@
 .border {
-    width: 180px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     height: 500px;
