--- a/src/components/SearchResult/SearchResult.module.scss
+++ b/src/components/SearchResult/SearchResult.module.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     justify-content:left;
     align-items: flex-start;
+    width: 40%
 }
 
 .search_result_head {
@@ -77,7 +78,7 @@
     position: absolute;
     width: 40%;
     height: max-content;
-    left: 210px;
+    left: 350px;
     top: 53px;
 
 }
@@ -362,4 +363,13 @@ margin: 0px 0px;
         visibility: hidden;
         width: 0px;
     }
+}
+
+.no_result {
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font: 30px Arial;
+    text-align: center;
 }
